# db-internals

./: .gitignore  CMakeLists.txt  README.md
.kiro/specs/database-internals-repo/: design.md  requirements.md  tasks.md
benchmarks/: .gitkeep  CMakeLists.txt
btree/: .gitkeep  CMakeLists.txt  MEMORY_MANAGEMENT.md  README.md  bplus_tree.hpp  bplus_tree_impl.hpp  iterator.hpp  iterator_impl.hpp  node.hpp  node_impl.hpp
columnar_storage/: .gitkeep  CMakeLists.txt
examples/: CMakeLists.txt  memory_demo.cpp
hash_index/: .gitkeep  CMakeLists.txt  hash_index.hpp
lsm/: .gitkeep  CMakeLists.txt  lsm_tree.hpp
query_engine/: .gitkeep  CMakeLists.txt
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt  btree_test.cpp  hash_index_test.cpp  lsm_test.cpp
